# haskell-type-classes-workshop

./: LICENSE  README.md  haskell-type-classes-workshop.cabal  stack.yaml
app/: Main.hs
src/: Applicative.hs  Definition.hs  Definitions.hs  Executor.hs  Functor.hs  Monad.hs  MyEither.hs  MyIdentity.hs  MyMaybe.hs  Parser.hs  SimpleJava.hs  SimpleRuby.hs
test/: Main.hs  Toc1.hs  Toc2.hs  Toc4.hs  Toc4a.hs  Toc4b.hs  Toc4c.hs
