name:               haskell-type-classes-workshop
version:            0.1.0.0
synopsis:           Initial project template from stack
description:        Please see README.md
homepage:           https://github.com/hjwylde/haskell-type-classes-workshop#readme
license:            BSD3
license-file:       LICENSE
author:             Henry J. Wylde
maintainer:         public@hjwylde.com
copyright:          BSD3
category:           Learning
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

source-repository head
    type:       git
    location:   https://github.com/hjwylde/haskell-type-classes-workshop

executable haskell-workshop
    main-is:            Main.hs
    hs-source-dirs:     app
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010

    build-depends:
        base,
        haskell-type-classes-workshop

library
    hs-source-dirs:     src/
    exposed-modules:
        Definitions
        MyEither
        MyIdentity
        MyMaybe
        Parser
        SimpleRuby

    default-language:   Haskell2010
    build-depends:
        base

test-suite haskell-type-classes-workshop-test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test/
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    other-modules:
        Toc1
        Toc2

    default-language:   Haskell2010
    build-depends:
        base,
        HUnit,
        haskell-type-classes-workshop
